Sistema de login

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4978,7 +4978,9 @@ span.badge {
 
 .section {
   padding-top: 1rem;
-  padding-bottom: 1rem; }
+  padding-bottom: 1rem;
+  padding-left: 13%;
+  padding-right: 13%; }
   .section.no-pad {
     padding: 0; }
   .section.no-pad-bot {
